# ferret

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  build.sh  ferret.desktop  install.sh  style.css  uninstall.sh
share/: style.css
src/: main.cpp  net.cpp  net.h  queue.h  str.cpp  str.h  ui.cpp  ui.h  worker.cpp  worker.h
