cmake_minimum_required (VERSION 3.5.1)
project(ferret)
find_package(Threads)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
include_directories(${GTK3_INCLUDE_DIRS})
link_directories(${GTK3_LIBRARY_DIRS})
add_definitions(${GTK3_CFLAGS_OTHER})
add_executable(ferret src/main.cpp src/worker.cpp src/net.cpp src/str.cpp src/ui.cpp)
target_link_libraries(ferret pthread ${GTK3_LIBRARIES})
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g --std=c++11")
