cmake_minimum_required (VERSION 3.5.1)
project(ferret)
find_package(Threads)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
include_directories(${GTK3_INCLUDE_DIRS})
link_directories(${GTK3_LIBRARY_DIRS})
add_definitions(${GTK3_CFLAGS_OTHER})
add_definitions(-DRESOURCE_PATH=${DESTINATION}share/)
add_executable(ferret src/main.cpp src/worker.cpp src/net.cpp src/str.cpp src/ui.cpp)
target_link_libraries(ferret pthread ${GTK3_LIBRARIES})
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g --std=c++11")

install(TARGETS ferret DESTINATION bin)
install(DIRECTORY share/ DESTINATION share/ferret)
install(CODE "execute_process(COMMAND xdg-desktop-menu install --novendor ../ferret.desktop)")
install(CODE "execute_process(COMMAND xdg-icon-resource install --novendor --size 256 ../icons/256/ferret.png)")

